--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint . --ext .ts,.tsx,.js --ignore-path .gitignore",
+    "lint:fix": "eslint . --ext .ts,.tsx,.js --ignore-path .gitignore --fix"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "prettier": {
+    "singleQuote": true,
+    "semi": false,
+    "trailingComma": "all"
   },
   "browserslist": {
     "production": [
@@ -34,5 +38,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^6.4.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react-hooks": "^2.1.2",
+    "prettier": "^1.18.2"
   }
 }
